--- a/configure.ac
+++ b/configure.ac
@@ -21,7 +21,7 @@ AC_DEFINE([KCAPI_PATCHLEVEL], [__KCAPI_PATCHLEVEL])
 AM_INIT_AUTOMAKE([foreign])
 LT_INIT
 AC_PROG_CC
-AC_CONFIG_FILES([Makefile lib/doc/Makefile])
+AC_CONFIG_FILES([Makefile])
 AM_PROG_LIBTOOL
 AC_CONFIG_MACRO_DIR([m4])
 AX_PROG_CC_FOR_BUILD
