--- a/configure.ac
+++ b/configure.ac
@@ -19,12 +19,13 @@ AC_DEFINE([KCAPI_MAJVERSION], [__KCAPI_MAJVERSION])
 AC_DEFINE([KCAPI_MINVERSION], [__KCAPI_MINVERSION])
 AC_DEFINE([KCAPI_PATCHLEVEL], [__KCAPI_PATCHLEVEL])
 AM_INIT_AUTOMAKE([foreign])
-LT_INIT
+LT_INIT([pic-only])
+AC_SUBST([LIBTOOL_DEPS])
 AC_PROG_CC
 AC_CONFIG_FILES([Makefile])
-AM_PROG_LIBTOOL
 AC_CONFIG_MACRO_DIR([m4])
 AX_PROG_CC_FOR_BUILD
+AX_CHECK_PIE
 
 AC_CHECK_PROG([CLANG], [clang], [yes])
 AC_CHECK_PROG([CPPCHECK], [cppcheck], [yes])
