CI: Add 'make scan' to Travis build
Signed-off-by: Stephan Mueller <smueller@chronox.de>

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,4 +44,6 @@ script:
     - >
         [ "$OK_CONFIGURE" = y ] && make cppcheck
     - >
+        [ "$OK_CONFIGURE" = y ] && make scan
+    - >
         [ "$OK_CONFIGURE" = y ] && cd test && bash ./test-invocation.sh
