Drop use of visibility=hidden
The version-script file already controls what is exported so this flag is
basically unnecessary now. It requires to sprinkle a bunch of attributes on
all exported function via the DSO_PUBLIC and other SYMVER macros.

Removing it makes it simpler to deal with exported symbols, leaving
control only to the version.lds file.

Signed-off-by: Simo Sorce <simo@redhat.com>
Signed-off-by: Stephan Mueller <smueller@chronox.de>

--- a/Makefile.am
+++ b/Makefile.am
@@ -69,7 +69,7 @@ else
 libkcapi_la_SOURCES +=
 endif
 
-libkcapi_la_CPPFLAGS = $(COMMON_CPPFLAGS) -fvisibility=hidden
+libkcapi_la_CPPFLAGS = $(COMMON_CPPFLAGS)
 libkcapi_la_LDFLAGS = $(COMMON_LDFLAGS) -Wl,--version-script,$(top_srcdir)/lib/version.lds -version-number `echo $(VERSION) | sed 's/\./:/g'`
 
 SCAN_FILES = $(libkcapi_la_SOURCES)
