Enable SM3 hash algorithm
SM3 algorithm was introduced in kernel version 4.15, so it is
necessary to support SM3 algorithm.

Signed-off-by: Tianjia Zhang <tianjia.zhang@linux.alibaba.com>
Signed-off-by: Stephan Mueller <smueller@chronox.de>

--- a/Makefile.am
+++ b/Makefile.am
@@ -154,8 +154,8 @@ EXTRA_bin_kcapi_hasher_DEPENDENCIES = libtool
 SCAN_FILES += $(bin_kcapi_hasher_SOURCES)
 
 hasher_links_fc = sha1sum sha224sum sha256sum sha384sum sha512sum \
-		  md5sum fipscheck fipshmac
-hasher_links_hc = sha1hmac sha224hmac sha256hmac sha384hmac sha512hmac
+		  md5sum sm3sum fipscheck fipshmac
+hasher_links_hc = sha1hmac sha224hmac sha256hmac sha384hmac sha512hmac sm3hmac
 hasher_links = $(hasher_links_fc) $(hasher_links_hc)
 
 CHECKSUM_CMD_FC = $(OPENSSL) sha256 -r -hmac orboDeJITITejsirpADONivirpUkvarP
