Use newer document applications
Signed-off-by: Stephan Mueller <smueller@chronox.de>

--- a/configure.ac
+++ b/configure.ac
@@ -31,8 +31,8 @@ AC_PATH_PROG([OPENSSL], [openssl])
 AC_PATH_PROG([CLANG], [clang])
 AC_PATH_PROG([CPPCHECK], [cppcheck])
 AC_PATH_PROG([XMLTO], [xmlto])
-AC_PATH_PROG([DB2PDF], [db2pdf])
-AC_PATH_PROG([DB2PS], [db2ps])
+AC_PATH_PROG([DB2PDF], [docbook2pdf])
+AC_PATH_PROG([DB2PS], [docbook2ps])
 AC_PATH_PROG([MKTEMP], [mktemp])
 
 AC_SEARCH_LIBS(clock_gettime,rt)
